<resources>
    <string name="app_name">KotlinIntro</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="hello">Hello</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="avatar">Avatar</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="nname">Nick Name</string>
    <string name="done">Done</string>

</resources>