<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInUpActivity">

    <ImageView
        android:id="@+id/imgSign"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/man" />

    <Button
        android:id="@+id/btnAvatar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="onClickAvatar"
        android:text="@string/avatar"
        app:layout_constraintEnd_toEndOf="@+id/imgSign"
        app:layout_constraintStart_toStartOf="@+id/imgSign"
        app:layout_constraintTop_toBottomOf="@+id/imgSign" />

    <EditText
        android:id="@+id/editLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/imgSign"
        app:layout_constraintStart_toStartOf="@+id/imgSign"
        app:layout_constraintTop_toBottomOf="@+id/btnAvatar" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text|textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editLogin"
        app:layout_constraintStart_toStartOf="@+id/editLogin"
        app:layout_constraintTop_toBottomOf="@+id/editLogin" />

    <EditText
        android:id="@+id/editFname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/fname"
        android:inputType="text"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <EditText
        android:id="@+id/editLname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/lname"
        android:inputType="text"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/editFname"
        app:layout_constraintStart_toStartOf="@+id/editFname"
        app:layout_constraintTop_toBottomOf="@+id/editFname" />

    <EditText
        android:id="@+id/editNname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/nname"
        android:inputType="text"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/editLname"
        app:layout_constraintStart_toStartOf="@+id/editLname"
        app:layout_constraintTop_toBottomOf="@+id/editLname" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onClickDone"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editNname" />
</androidx.constraintlayout.widget.ConstraintLayout>